--- a/scenarios/polygon-cdk/cdk-erigon-rollup/network/sequencer-high-latency.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-rollup/network/sequencer-high-latency.yaml
@@ -3,62 +3,95 @@ kind: ChaosScenario
 metadata:
   name: sequencer-high-latency
   description: Inject 500ms latency on sequencer RPC to test transaction submission resilience
-  tags: [network, latency, high, sequencer, rpc]
+  tags:
+  - network
+  - latency
+  - high
+  - sequencer
+  - rpc
   author: DevTools
-  version: "0.0.1"
-
+  version: 0.0.1
 spec:
-  # Target sequencer (works for both cdk-erigon and op-geth)
   targets:
-    - selector:
-        type: kurtosis_service
-        enclave: "${ENCLAVE_NAME}"
-        pattern: ".*sequencer.*|.*op-el-1.*"
-      alias: sequencer_node
-
+  - selector:
+      type: kurtosis_service
+      enclave: ${ENCLAVE_NAME}
+      pattern: .*sequencer.*|.*op-el-1.*
+    alias: sequencer_node
   duration: 5m
   warmup: 30s
   cooldown: 30s
-
-  # Add 500ms latency on RPC ports
   faults:
-    - phase: sequencer_latency
-      description: Add 500ms latency to sequencer RPC endpoints
-      target: sequencer_node
-      type: network
-      params:
-        device: eth0
-        latency: 500
-        target_ports: "8545,8546,8547"
-        target_proto: tcp
-
+  - phase: sequencer_latency
+    description: Add 500ms latency to sequencer RPC endpoints
+    target: sequencer_node
+    type: network
+    params:
+      device: eth0
+      latency: 500
+      target_ports: 8545,8546,8547
+      target_proto: tcp
   success_criteria:
-    - name: blocks_continue_production
-      description: Block production continues despite RPC latency
-      type: prometheus
-      query: increase(panoptichain_rpc_height[1m])
-      threshold: "> 0"
-      window: 5m
-      critical: true
-
-    - name: sequencer_remains_available
-      description: Sequencer service remains available
-      type: prometheus
-      query: up{job=~"cdk-erigon-sequencer.*"}
-      threshold: "== 1"
-      window: 5m
-      critical: false
-
-    - name: gas_usage_continues
-      description: Gas continues to be used (transactions processing)
-      type: prometheus
-      query: increase(panoptichain_rpc_gas_used_sum[2m])
-      threshold: "> 0"
-      window: 5m
-      critical: false
-
+  - name: blocks_continue_production
+    description: Block production continues despite RPC latency
+    type: prometheus
+    query: increase(panoptichain_rpc_height[1m])
+    threshold: '> 0'
+    window: 5m
+    critical: true
+  - name: sequencer_remains_available
+    description: Sequencer service remains available
+    type: prometheus
+    query: up{job=~"cdk-erigon-sequencer.*"}
+    threshold: == 1
+    window: 5m
+    critical: false
+  - name: block_time_stable
+    description: Block time remains stable (not increasing significantly)
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
+  - name: gas_usage_continues
+    description: Gas continues to be used (transactions processing)
+    type: prometheus
+    query: increase(panoptichain_rpc_gas_used_sum[2m])
+    threshold: '> 0'
+    window: 5m
+    critical: false
+  - name: batches_being_sequenced
+    description: New batches are being sequenced
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_sequenced_batches[5m])
+    threshold: '> 0'
+    window: 5m
+    critical: false
+  - name: batches_being_verified
+    description: Batches are being verified (proofs generated)
+    type: prometheus
+    query: increase(panoptichain_rpc_zkevm_total_verified_batches[10m])
+    threshold: '> 0'
+    window: 10m
+    critical: false
   metrics:
-    - panoptichain_rpc_height
-    - panoptichain_rpc_gas_used_sum
-    - panoptichain_rpc_block_interval_sum
-    - up
+  - panoptichain_rpc_height
+  - panoptichain_rpc_gas_used_sum
+  - panoptichain_rpc_block_interval_sum
+  - up
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_finalized_height
+  - panoptichain_rpc_time_to_finalized
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
+  - panoptichain_rpc_zkevm_total_sequenced_batches
+  - panoptichain_rpc_zkevm_total_verified_batches
+  - panoptichain_rpc_zkevm_time_since_last_aggregation
