--- a/scenarios/polygon-cdk/cdk-erigon-sovereign-pessimistic/network/sequencer-high-latency.yaml
+++ b/scenarios/polygon-cdk/cdk-erigon-sovereign-pessimistic/network/sequencer-high-latency.yaml
@@ -2,8 +2,7 @@ apiVersion: chaos.polygon.io/v1
 kind: ChaosScenario
 metadata:
   name: sequencer-high-latency
-  description: Inject 500ms latency on sequencer RPC to test transaction submission
-    resilience
+  description: Inject 500ms latency on sequencer RPC to test transaction submission resilience
   tags:
   - network
   - latency
@@ -47,6 +46,20 @@ spec:
     threshold: == 1
     window: 5m
     critical: false
+  - name: block_time_stable
+    description: Block time remains stable (not increasing significantly)
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate doesn't drop significantly
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
   - name: gas_usage_continues
     description: Gas continues to be used (transactions processing)
     type: prometheus
@@ -59,3 +72,9 @@ spec:
   - panoptichain_rpc_gas_used_sum
   - panoptichain_rpc_block_interval_sum
   - up
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_gas_used_count
+  - panoptichain_rpc_finalized_height
+  - panoptichain_rpc_time_to_finalized
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
