--- a/scenarios/polygon-cdk/op-geth/network/sequencer-high-latency.yaml
+++ b/scenarios/polygon-cdk/op-geth/network/sequencer-high-latency.yaml
@@ -2,8 +2,7 @@ apiVersion: chaos.polygon.io/v1
 kind: ChaosScenario
 metadata:
   name: sequencer-high-latency
-  description: Inject 500ms latency on sequencer RPC to test transaction submission
-    resilience
+  description: Inject 500ms latency on sequencer RPC to test transaction submission resilience
   tags:
   - network
   - latency
@@ -40,6 +39,20 @@ spec:
     threshold: '> 0'
     window: 5m
     critical: true
+  - name: block_time_stable
+    description: Block time doesn't increase significantly despite latency
+    type: prometheus
+    query: rate(panoptichain_rpc_block_interval_sum[2m]) / rate(panoptichain_rpc_block_interval_count[2m])
+    threshold: < 5.0
+    window: 5m
+    critical: false
+  - name: transaction_throughput_maintained
+    description: Transaction processing rate remains healthy
+    type: prometheus
+    query: rate(panoptichain_rpc_gas_used_count[1m])
+    threshold: '> 0.1'
+    window: 5m
+    critical: false
   - name: gas_usage_continues
     description: Gas continues to be used (transactions processing)
     type: prometheus
@@ -50,5 +63,11 @@ spec:
   metrics:
   - panoptichain_rpc_height
   - panoptichain_rpc_gas_used_sum
+  - panoptichain_rpc_gas_used_count
   - panoptichain_rpc_block_interval_sum
+  - panoptichain_rpc_block_interval_count
+  - panoptichain_rpc_time_to_mine_sum
+  - panoptichain_rpc_time_to_mine_count
   - up
+  - panoptichain_rpc_finalized_height
+  - panoptichain_rpc_time_to_finalized
